  buttons for wxBoxSizer and wxStaticBoxSizer.
* Fixed moving left, right, and into a new wxBoxSizer for spacers.
* Fixed FS#72 — "When editing a property in the property grid, it is lost when you click away."
* Fixed FS#73 — "Toolbar tools not selecting the object in the object tree."
* Fixed FS#71 — "wxSplitter window sashpos not being set."
* ID_DEFAULT is no longer defined when not used.
^ Object tree now saves its state.
^ Object tree now also scrolls horizontally when selecting an object.
^ Added class name and line to error message for unknown classes when importing xrc.
^ Improved both C++ and XRC code generation for wxSplitterWindow.
^ Implemented FS#26 — "Chronological id creation."
+ Added support for using wxSplitterWindow with only one child.
+ Added min_pane_size and sashsize properties to wxSplitterWindow.
+ Added maximum size property to wxWindow properties.
+ Implemented FS#48 — "Improve error notification when a plugin is missing."
  If widgets are missing, the project will not load at all.

10-13-2006 Version 3.00.04
* Fixed visual editor for subpanels.
* Fixed circular subclassing. This resolves FS#32.
* Fixed Alt-Tab icon. This resolves FS#34.
^ Now limiting to a single instance of wxFB per project file. The resolves FS#31.

10-08-2006 Version 3.00.03 (Beta 1)
* Fixed wxWindow settings code generation.

10-07-2006 Version 3.00.02 (Beta 1)
* Fixed generation bugs in submenu and wxCheckList (now wxCheckListBox)
  These were caused by subclass in version 2.00.75. This closes FS#20.
* Changed title of save dialog box from "Open Project" to "Save Project"
  This closes FS#18.
* Fixed xrc generation of static bitmap using patch supplied by henrique.
  This closes FS#16
* Added subclassing on forms. This closes FS#21.
* Fixed C++ output of value property for wxGauge.
+ Added center property for wxDialog and wxFrame. This closes FS#17.
+ Individual directories for each plug-in.
+ Toolbar separators. This closes FS#11.